FEAT: update logm display

--- a/site/templates/twig/msa/logm/user/display.twig
+++ b/site/templates/twig/msa/logm/user/display.twig
@@ -6,3 +6,6 @@
 		{% include 'msa/logm/user/form.twig' %}
 	</div>
 </div>
+
+{% include 'msa/logm/user/password/modal/pswd.twig' %}
+{% include 'msa/logm/user/password/modal/pswd-web.twig' %}
