--- a/site/templates/twig/msa/logm/user/form/privileges.twig
+++ b/site/templates/twig/msa/logm/user/form/privileges.twig
@@ -1,35 +1,33 @@
-<div class="form-group row">
+<div class="mb-2 form-row">
 	<div class="col-sm-3">
 		<label for="restrictaccess">Restrict Div Access</label>
 	</div>
-	<div class="col-sm-3">
+	<div class="col-sm-2">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
-				'select': {
-					'name': 'restrictaccess',
-					'addclasses': ['form-control-sm'],
-					'value' : duser.restrictAccess() ? 'Y' : 'N',
-					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
-				}
+			'select': {
+				'name': 'restrictaccess',
+				'addclasses': ['form-control-sm'],
+				'value' : duser.restrictAccess() ? 'Y' : 'N',
+				'haskeys': true,
+				'options': {'Y': 'Yes', 'N': 'No'}
 			}
-		%}
+		} %}
 	</div>
 </div>
 
-<div class="form-group row">
+<div class="mb-2 form-row">
 	<div class="col-sm-3">
 		<label for="allowprocessdelete">Allow Process Removal</label>
 	</div>
-	<div class="col-sm-3">
+	<div class="col-sm-2">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
-				'select': {
-					'name': 'allowprocessdelete',
-					'addclasses': ['form-control-sm'],
-					'value' : duser.allowProcessDelete() ? 'Y' : 'N',
-					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
-				}
+			'select': {
+				'name': 'allowprocessdelete',
+				'addclasses': ['form-control-sm'],
+				'value' : duser.allowProcessDelete() ? 'Y' : 'N',
+				'haskeys': true,
+				'options': {'Y': 'Yes', 'N': 'No'}
 			}
-		%}
+		} %}
 	</div>
 </div>
