--- a/site/templates/twig/msa/logm/user/form/user-roles.twig
+++ b/site/templates/twig/msa/logm/user/form/user-roles.twig
@@ -1,54 +1,50 @@
-<div class="row">
-	<div class="form-group col-sm-3">
+<div class="mb-2 form-row">
+	<div class="col-sm-3">
 		<label for="admin">System Administrator</label>
-		{% include 'util/bootstrap/form/select-simple.twig' with {
-				'select': {
-					'name': 'admin',
-					'addclasses': ['form-control-sm'],
-					'value' : duser.isAdmin() ? 'Y' : 'N',
-					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
-				}
-			}
-		%}
 	</div>
-	<div class="form-group col-sm-3">
-		<label for="storefront">Store Front</label>
+	<div class="col-sm-2">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
-				'select': {
-					'name': 'admin',
-					'addclasses': ['form-control-sm'],
-					'value' : duser.isStorefront() ? 'Y' : 'N',
-					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
-				}
+			'select': {
+				'name': 'admin',
+				'addclasses': ['form-control-sm'],
+				'value' : duser.isAdmin() ? 'Y' : 'N',
+				'haskeys': true,
+				'options': {'Y': 'Yes', 'N': 'No'}
 			}
-		%}
+		} %}
 	</div>
-	<div class="form-group col-sm-3">
+</div>
+
+<div class="mb-2 form-row">
+	<div class="col-sm-3">
 		<label for="citydesk">City Desk</label>
-		{% include 'util/bootstrap/form/select-simple.twig' with {
-				'select': {
-					'name': 'citydesk',
-					'addclasses': ['form-control-sm'],
-					'value' : duser.isCityDesk() ? 'Y' : 'N',
-					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
-				}
-			}
-		%}
 	</div>
-	<div class="form-group col-sm-3">
-		<label for="reportadmin">Report Admin</label>
+	<div class="col-sm-2">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
-				'select': {
-					'name': 'reportadmin',
-					'addclasses': ['form-control-sm'],
-					'value' : duser.isReportAdmin() ? 'Y' : 'N',
-					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
-				}
+			'select': {
+				'name': 'citydesk',
+				'addclasses': ['form-control-sm'],
+				'value' : duser.isCityDesk() ? 'Y' : 'N',
+				'haskeys': true,
+				'options': {'Y': 'Yes', 'N': 'No'}
 			}
-		%}
+		} %}
+	</div>
+</div>
+
+<div class="mb-2 form-row">
+	<div class="col-sm-3">
+		<label for="reportadmin">Report Admin</label>
+	</div>
+	<div class="col-sm-2">
+		{% include 'util/bootstrap/form/select-simple.twig' with {
+			'select': {
+				'name': 'reportadmin',
+				'addclasses': ['form-control-sm'],
+				'value' : duser.isReportAdmin() ? 'Y' : 'N',
+				'haskeys': true,
+				'options': {'Y': 'Yes', 'N': 'No'}
+			}
+		} %}
 	</div>
 </div>
