--- a/site/templates/twig/msa/logm/user/form/inputs/companyid.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/companyid.twig
@@ -3,11 +3,11 @@
 		'type': 'number',
 		'name': 'companyid',
 		'value': duser.companyid,
+		'size': 'sm',
 		'addclasses': ['text-right'],
 		'attributes': {
 			'placeholder': '',
 			'aria-label':  'Company ID',
-			'required': true,
 		}
 	}
 } %}
