FEAT: add attribute data-jqv for value normalization in js

--- a/site/templates/twig/msa/logm/user/form/inputs/id.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/id.twig
@@ -8,7 +8,8 @@
 			'aria-label':  'Login ID',
 			'readonly': duser.isNew() == false,
 			'maxlength': logm.fieldAttribute('id', 'maxlength'),
-			'oninput': 'this.value = this.value.toLowerCase()'
+			'oninput': 'this.value = this.value.toLowerCase()',
+			'data-jqv': 'true'
 		}
 	}
 } %}
