--- a/site/templates/twig/msa/logm/user/form/inputs/whseid.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/whseid.twig
@@ -9,6 +9,7 @@
 				'placeholder': '',
 				'aria-label':  'Warehouse ID',
 				'required': true,
+				'data-jqv': 'true'
 			}
 		},
 		'button': {
