FEAT: add negative tabindex for data-toggle buttons

--- a/site/templates/twig/msa/logm/user/form/inputs/printerreport.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/printerreport.twig
@@ -7,7 +7,7 @@
 			'value': duser.printerreport,
 			'attributes': {
 				'placeholder': '',
-				'aria-label':  'ReportPrinter'
+				'aria-label':  'ReportPrinter',
 				'data-jqv': 'true'
 			}
 		},
@@ -19,7 +19,8 @@
 				'data-toggle': 'modal',
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('msa/printers'),
-				'data-input': '#printerreport'
+				'data-input': '#printerreport',
+				'tabindex': '-1'
 			}
 		}
 	}
