--- a/site/templates/twig/msa/logm/user/form/inputs/roleid.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/roleid.twig
@@ -7,7 +7,7 @@
 			'value': duser.roleid,
 			'attributes': {
 				'placeholder': '',
-				'aria-label':  'Login Role'
+				'aria-label':  'Login Role',
 				'data-jqv': 'true'
 			}
 		},
@@ -19,7 +19,8 @@
 				'data-toggle': 'modal',
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('msa/lrole'),
-				'data-input': '#roleid'
+				'data-input': '#roleid',
+				'tabindex': '-1'
 			}
 		}
 	}
