--- a/site/templates/twig/msa/logm/user/form/inputs/whseid.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/whseid.twig
@@ -20,7 +20,8 @@
 				'data-toggle': 'modal',
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('warehouses'),
-				'data-input': '#whseid'
+				'data-input': '#whseid',
+				'tabindex': '-1'
 			}
 		}
 	}
