--- a/site/templates/twig/msa/logm/user/form/inputs/groupid.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/groupid.twig
@@ -7,7 +7,7 @@
 			'value': duser.groupid,
 			'attributes': {
 				'placeholder': '',
-				'aria-label':  'Login Group'
+				'aria-label':  'Login Group',
 				'data-jqv': 'true'
 			}
 		},
@@ -20,6 +20,8 @@
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('msa/lgrp'),
 				'data-input': '#groupid'
+				'data-input': '#groupid',
+				'tabindex': '-1'
 			}
 		}
 	}
