--- a/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
@@ -7,7 +7,7 @@
 			'value': duser.printerbrowse,
 			'attributes': {
 				'placeholder': '',
-				'aria-label':  'Browse Printer'
+				'aria-label':  'Browse Printer',
 				'data-jqv': 'true'
 			}
 		},
@@ -19,7 +19,8 @@
 				'data-toggle': 'modal',
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('msa/printers'),
-				'data-input': '#printerbrowse'
+				'data-input': '#printerbrowse',
+				'tabindex': '-1'
 			}
 		}
 	}
