FEAT: use ajax-description for fields to contain ajax descriptions

--- a/site/templates/twig/msa/logm/user/form.twig
+++ b/site/templates/twig/msa/logm/user/form.twig
@@ -27,7 +27,7 @@
 					{% include 'msa/logm/user/form/inputs/whseid.twig' %}
 				</div>
 				<div class="col-sm-6">
-					<p class="form-control-plaintext form-control-sm text-muted name">
+					<p class="form-control-plaintext form-control-sm text-muted ajax-description">
 						{{ duser.getWhse().name }}
 					</p>
 				</div>
