FEAT: add class printer to input

--- a/site/templates/twig/msa/logm/user/form/inputs/printerreport.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/printerreport.twig
@@ -5,6 +5,7 @@
 		'input': {
 			'name': 'printerreport',
 			'value': duser.printerreport,
+			'addclasses': ['printer'],
 			'attributes': {
 				'placeholder': '',
 				'aria-label':  'ReportPrinter',
