--- a/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
@@ -5,6 +5,7 @@
 		'input': {
 			'name': 'printerbrowse',
 			'value': duser.printerbrowse,
+			'addclasses': ['printer'],
 			'attributes': {
 				'placeholder': '',
 				'aria-label':  'Browse Printer',
