FEAT: make printer ids required

--- a/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
@@ -9,7 +9,8 @@
 			'attributes': {
 				'placeholder': '',
 				'aria-label':  'Browse Printer',
-				'data-jqv': 'true'
+				'data-jqv': 'true',
+				'required': true,
 			}
 		},
 		'button': {
