--- a/site/templates/twig/msa/logm/user/form/inputs/printerreport.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/printerreport.twig
@@ -8,8 +8,9 @@
 			'addclasses': ['printer'],
 			'attributes': {
 				'placeholder': '',
-				'aria-label':  'ReportPrinter',
-				'data-jqv': 'true'
+				'aria-label':  'Report Printer',
+				'data-jqv': 'true',
+				'required': true,
 			}
 		},
 		'button': {
