FEAT:: add link to add User

--- a/site/templates/twig/msa/logm/list/list.twig
+++ b/site/templates/twig/msa/logm/list/list.twig
@@ -18,9 +18,9 @@
 				<th class="py-2">CD</th>
 				<th class="py-2">RA</th>
 				<th class="py-2 text-center">
-					<button type="button" class="btn btn-sm btn-light" data-toggle="modal" data-target="#notes-modal" data-code="" data-description="">
+					<a href="{{ page.userAddUrl() }}" class="btn btn-sm btn-light">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add
-					</button>
+					</a>
 				</th>
 			</tr>
 		</thead>
