--- a/site/templates/twig/msa/logm/user/form/inputs/id.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/id.twig
@@ -9,7 +9,8 @@
 			'readonly': duser.isNew() == false,
 			'maxlength': logm.fieldAttribute('id', 'maxlength'),
 			'oninput': 'this.value = this.value.toLowerCase()',
-			'data-jqv': 'true'
+			'data-jqv': 'true',
+			'tabindex': 1,
 		}
 	}
 } %}
