--- a/site/templates/twig/msa/logm/user/form/inputs/name.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/name.twig
@@ -7,6 +7,7 @@
 			'placeholder': '',
 			'aria-label':  'Login Name',
 			'maxlength': logm.fieldAttribute('name', 'maxlength'),
+			'tabindex': 2,
 		}
 	}
 } %}
