--- a/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/printerbrowse.twig
@@ -11,6 +11,7 @@
 				'aria-label':  'Browse Printer',
 				'data-jqv': 'true',
 				'required': true,
+				'tabindex': 7,
 			}
 		},
 		'button': {
