--- a/site/templates/twig/msa/logm/user/form.twig
+++ b/site/templates/twig/msa/logm/user/form.twig
@@ -64,7 +64,10 @@
 					'addclasses': ['form-control-sm'],
 					'value' : duser.displayUserWhseFirst() ? 'Y' : 'N',
 					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
+					'options': {'Y': 'Yes', 'N': 'No'},
+					'attributes': {
+						'tabindex': 9,
+					}
 				}
 			} %}
 		</div>
@@ -81,7 +84,10 @@
 					'addclasses': ['form-control-sm'],
 					'value' : duser.displayActiveItemsOnly() ? 'Y' : 'N',
 					'haskeys': true,
-					'options': {'Y': 'Yes', 'N': 'No'}
+					'options': {'Y': 'Yes', 'N': 'No'},
+					'attributes': {
+						'tabindex': 10,
+					}
 				}
 			} %}
 		</div>
