--- a/site/templates/twig/msa/logm/user/form/inputs/roleid.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/roleid.twig
@@ -8,7 +8,8 @@
 			'attributes': {
 				'placeholder': '',
 				'aria-label':  'Login Role',
-				'data-jqv': 'true'
+				'data-jqv': 'true',
+				'tabindex': 14,
 			}
 		},
 		'button': {
