--- a/site/templates/twig/msa/logm/user/form/inputs/whseid.twig
+++ b/site/templates/twig/msa/logm/user/form/inputs/whseid.twig
@@ -9,7 +9,8 @@
 				'placeholder': '',
 				'aria-label':  'Warehouse ID',
 				'required': true,
-				'data-jqv': 'true'
+				'data-jqv': 'true',
+				'tabindex': 3,
 			}
 		},
 		'button': {
