--- a/site/templates/twig/msa/logm/user/form/privileges.twig
+++ b/site/templates/twig/msa/logm/user/form/privileges.twig
@@ -9,7 +9,10 @@
 				'addclasses': ['form-control-sm'],
 				'value' : duser.restrictAccess() ? 'Y' : 'N',
 				'haskeys': true,
-				'options': {'Y': 'Yes', 'N': 'No'}
+				'options': {'Y': 'Yes', 'N': 'No'},
+				'attributes': {
+					'tabindex': 11,
+				}
 			}
 		} %}
 	</div>
@@ -26,7 +29,10 @@
 				'addclasses': ['form-control-sm'],
 				'value' : duser.allowProcessDelete() ? 'Y' : 'N',
 				'haskeys': true,
-				'options': {'Y': 'Yes', 'N': 'No'}
+				'options': {'Y': 'Yes', 'N': 'No'},
+				'attributes': {
+					'tabindex': 12,
+				}
 			}
 		} %}
 	</div>
