--- a/site/templates/twig/msa/logm/user/form/user-roles.twig
+++ b/site/templates/twig/msa/logm/user/form/user-roles.twig
@@ -26,7 +26,10 @@
 				'addclasses': ['form-control-sm'],
 				'value' : duser.isCityDesk() ? 'Y' : 'N',
 				'haskeys': true,
-				'options': {'Y': 'Yes', 'N': 'No'}
+				'options': {'Y': 'Yes', 'N': 'No'},
+				'attributes': {
+					'tabindex': 5,
+				}
 			}
 		} %}
 	</div>
@@ -43,7 +46,10 @@
 				'addclasses': ['form-control-sm'],
 				'value' : duser.isReportAdmin() ? 'Y' : 'N',
 				'haskeys': true,
-				'options': {'Y': 'Yes', 'N': 'No'}
+				'options': {'Y': 'Yes', 'N': 'No'},
+				'attributes': {
+					'tabindex': 6,
+				}
 			}
 		} %}
 	</div>
