--- a/site/templates/twig/msa/logm/bread-crumbs.twig
+++ b/site/templates/twig/msa/logm/bread-crumbs.twig
@@ -7,24 +7,43 @@
 {% extends 'util/bread-crumbs.twig' %}
 
 {% set values      = input.get %}
-{% set segments    = input.urlSegments() %}
-{% set lastsegment = segments[segments|length] %}
-{% set menu = input.urlSegment(-2) ? input.urlSegment(-2) : page.name %}
 
 {% block current_page %}
-	{% if menu and menu != page.name %}
-		<li class="breadcrumb-item">
-			<a href="{{ page.url }}">
-				<i class="fa fa-list" aria-hidden="true"></i> {{ page.dplus_function ? page.dplus_function|upper : page.title }}
-			</a>
-		</li>
-	{% endif %}
 	<li class="breadcrumb-item">
-		<a href="{{ page.menuUrl() }}">
-			<i class="fa fa-list" aria-hidden="true"></i> {{ menu|upper }}
+		<a href="{{ page.url }}">
+			<i class="fa fa-list" aria-hidden="true"></i> {{ page.dplus_function ? page.dplus_function|upper : page.title }}
 		</a>
 	</li>
-	<li class="breadcrumb-item active" aria-current="page">
-		<i class="fa fa-microchip" aria-hidden="true"></i> {{ input.urlSegmentLast()|upper }}
-	</li>
+	
+	{% if values.offsetExists('id') == false %}
+		<li class="breadcrumb-item active" aria-current="page">
+			<i class="fa fa-microchip" aria-hidden="true"></i> {{ input.urlSegmentLast()|upper }}
+		</li>
+	{% endif %}
+
+	{% if values.offsetExists('id') %}
+		<li class="breadcrumb-item" aria-current="page">
+			<a href="{{ page.logmUrl(values.string('id')) }}">
+				<i class="fa fa-microchip" aria-hidden="true"></i> LOGM
+			</a>
+		</li>
+
+		{% if input.urlSegmentLast() == 'logm' %}
+			<li class="breadcrumb-item active" aria-current="page">
+				{{ values.string('id') }}
+			</li>
+		{% endif %}
+		
+
+		{% if input.urlSegmentLast() != 'logm' %}
+			<li class="breadcrumb-item" aria-current="page">
+				<a href="{{ page.userEditUrl(values.string('id')) }}">
+					{{ values.string('id') }}
+				</a>
+			</li>
+			<li class="breadcrumb-item active" aria-current="page">
+				{{ input.urlSegmentLast()|upper }}
+			</li>
+		{% endif %}
+	{% endif %}
 {% endblock %}
