REFACTOR: put fax-email defaults in modal form

--- a/site/templates/twig/msa/logm/user/subfunction-links.twig
+++ b/site/templates/twig/msa/logm/user/subfunction-links.twig
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-justified">
 	<li class="nav-item border">
-		<a class="nav-link" href="{{ page.userEditContactUrl(input.get.text('id')) }}">
-			Contact
+		<a class="nav-link" data-toggle="modal" href="#fax-email-defaults-modal">
+			Fax / Email Defaults
 		</a>
 	</li>
 	<li class="nav-item border">
