--- a/site/templates/twig/msa/logm/user/display.twig
+++ b/site/templates/twig/msa/logm/user/display.twig
@@ -1,11 +1,13 @@
-<div class="mb-3">
-	{% include 'msa/logm/user/subfunction-links.twig' %}
-</div>
-<div class="row">
+<div class="row mb-4">
 	<div class="col-sm-8">
 		{% include 'msa/logm/user/form.twig' %}
 	</div>
 </div>
+<hr>
+<div class="mb-3 col-sm-8 px-0">
+	{% include 'msa/logm/user/subfunction-links.twig' %}
+</div>
 
+{% include 'msa/logm/user/fax-email-defaults/modal.twig' %}
 {% include 'msa/logm/user/password/modal/pswd.twig' %}
 {% include 'msa/logm/user/password/modal/pswd-web.twig' %}
