--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/coversheet.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/coversheet.twig
@@ -8,7 +8,7 @@
 			'placeholder': '',
 			'aria-label':  'Cover Sheet',
 			'maxlength': CONTACTM.fieldAttribute('coversheet', 'maxlength'),
-			'tabindex': 106,
+			'tabindex': tabindex,
 		},
 	}
 } %}
