--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/email.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/email.twig
@@ -7,7 +7,7 @@
 		'attributes': {
 			'aria-label':  'Email',
 			'maxlength': CONTACTM.fieldAttribute('email', 'maxlength'),
-			'tabindex': 110
+			'tabindex': tabindex
 		}
 	}
 } %}
