--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/fax.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/fax.twig
@@ -7,7 +7,7 @@
 		'attributes': {
 			'placeholder': '',
 			'aria-label':  'Fax Number',
-			'tabindex': 104
+			'tabindex': tabindex
 		},
 	}
 } %}
