--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/faxcompany.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/faxcompany.twig
@@ -7,7 +7,7 @@
 			'placeholder': '',
 			'aria-label':  'Fax / Email Company',
 			'maxlength': CONTACTM.fieldAttribute('faxcompany', 'maxlength'),
-			'tabindex': 103,
+			'tabindex': tabindex,
 		}
 	}
 } %}
