--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/faxname.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/faxname.twig
@@ -7,7 +7,7 @@
 			'placeholder': '',
 			'aria-label':  'Fax / Email as  Name',
 			'maxlength': CONTACTM.fieldAttribute('faxname', 'maxlength'),
-			'tabindex': 102,
+			'tabindex': tabindex,
 		}
 	}
 } %}
