--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/faxsubject.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/faxsubject.twig
@@ -8,7 +8,7 @@
 			'placeholder': '',
 			'aria-label':  'Subject',
 			'maxlength': CONTACTM.fieldAttribute('faxsubject', 'maxlength'),
-			'tabindex': 107,
+			'tabindex': tabindex,
 		},
 	}
 } %}
