--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/notifyfailure.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form/inputs/notifyfailure.twig
@@ -6,7 +6,7 @@
 		'size': 'sm',
 		'attributes': {
 			'checked': contact.notifyFailure(),
-			'tabindex': 109
+			'tabindex': tabindex
 		}
 	}
 } %}
