--- a/site/templates/twig/msa/logm/user/fax-email-defaults/form.twig
+++ b/site/templates/twig/msa/logm/user/fax-email-defaults/form.twig
@@ -17,62 +17,12 @@
 
 	<div class="row">
 		<div class="col-sm-8">
-			<legend>Send From</legend>
-			<div class="row mb-2">
-				<div class="col-sm-3">
-					<label for="faxname">Name</label>
-				</div>
-				<div class="col-sm-5">
-					{% set tabindex = tabindex + 1 %}
-					{% include 'msa/logm/user/fax-email-defaults/form/inputs/faxname.twig' %}
-				</div>
-			</div>
-			<div class="row mb-2">
-				<div class="col-sm-3">
-					<label for="faxcompany">Company</label>
-				</div>
-				<div class="col-sm-5">
-					{% set tabindex = tabindex + 1 %}
-					{% include 'msa/logm/user/fax-email-defaults/form/inputs/faxcompany.twig' %}
-				</div>
-			</div>
-			<div class="row mb-2">
-				<div class="col-sm-3">
-					<label for="fax">Fax Number</label>
-				</div>
-				<div class="col-sm-9">
-					{% set tabindex = tabindex + 1 %}
-					{% include 'msa/logm/user/fax-email-defaults/form/inputs/fax.twig' %}
-				</div>
-			</div>
-			<div class="row mb-2">
-				<div class="col-sm-3">
-					<label for="phone">Phone Number</label>
-				</div>
-				<div class="col-sm-9">
-					{% set tabindex = tabindex + 1 %}
-					{% include 'msa/logm/user/fax-email-defaults/form/inputs/phone.twig' %}
-				</div>
-			</div>
+			<legend class="text-center">Send From</legend>
+			{% include 'msa/logm/user/fax-email-defaults/form/send-from.twig' %}
 		</div>
 		<div class="col-sm-4">
-			<legend>Send Time</legend>
-			{% for option,label in CONTACTM.fieldAttribute('sendtime', 'options') %}
-				{% set tabindex = tabindex + 1 %}
-				{% include 'util/bootstrap/form/radio-custom.twig' with {
-					'input': {
-						'id': option,
-						'name': 'sendtime',
-						'value': option,
-						'label': label,
-						'size': 'sm',
-						'attributes': {
-							'checked': option == contact.sendtime,
-							'tabindex': tabindex,
-						}
-					}
-				} %}
-			{% endfor %}
+			<legend class="text-center">Send Time</legend>
+			{% include 'msa/logm/user/fax-email-defaults/form/send-time.twig' %}
 		</div>
 	</div>
 
@@ -122,5 +72,17 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="d-flex justify-content-between align-items-center">
+		{% if logm.recordlocker.userHasLocked(duser.id) or duser.isNew() %}
+			<button type="submit" name="action" value="update" class="btn btn-success">
+				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+			</button>
+		{% endif %}
+
+		<a href="{{ page.userEditUrl(duser.id) }}" class="btn btn-warning">
+			<i class="fa fa-times" aria-hidden="true"></i> Close
+		</a>
 	</div>
 </form>
