--- a/site/templates/twig/msa/logm/user/contact/modal.twig
+++ b/site/templates/twig/msa/logm/user/contact/modal.twig
@@ -1,15 +1,15 @@
 <!-- Modal -->
-<div class="modal fade" id="fax-email-defaults-modal" tabindex="-1" role="dialog" aria-labelledby="fax-email-defaults-modal-title" aria-hidden="true">
+<div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-title" aria-hidden="true">
 	<div class="modal-dialog modal-xl" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="fax-email-defaults-modal-title">Fax / Email Defaults</h5>
+				<h5 class="modal-title" id="contact-modal-title">Fax / Email Defaults</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
-				{% include 'msa/logm/user/fax-email-defaults/form.twig' %}
+				{% include 'msa/logm/user/contact/form.twig' %}
 			</div>
 		</div>
 	</div>
