--- a/site/templates/twig/msa/logm/user/contact/form/inputs/faxcompany.twig
+++ b/site/templates/twig/msa/logm/user/contact/form/inputs/faxcompany.twig
@@ -1,6 +1,6 @@
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
-		'company': 'faxcompany',
+		'name': 'faxcompany',
 		'value': contact.faxcompany,
 		'size': 'sm',
 		'attributes': {
