--- a/site/templates/twig/msa/logm/user/subfunction-links.twig
+++ b/site/templates/twig/msa/logm/user/subfunction-links.twig
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-justified">
 	<li class="nav-item border">
-		<a class="nav-link" data-toggle="modal" href="#fax-email-defaults-modal">
+		<a class="nav-link" data-toggle="modal" href="#contact-modal">
 			Fax / Email Defaults
 		</a>
 	</li>
