--- a/site/templates/twig/msa/logm/user/contact/form.twig
+++ b/site/templates/twig/msa/logm/user/contact/form.twig
@@ -74,6 +74,8 @@
 		</div>
 	</div>
 
+	<hr class="mb-3">
+
 	<div class="d-flex justify-content-between align-items-center">
 		{% if logm.recordlocker.userHasLocked(duser.id) or duser.isNew() %}
 			<button type="submit" name="action" value="update" class="btn btn-success">
@@ -81,8 +83,8 @@
 			</button>
 		{% endif %}
 
-		<a href="{{ page.userEditUrl(duser.id) }}" class="btn btn-warning">
+		<button type="button" class="btn btn-warning" data-dismiss="modal">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
-		</a>
+		</button>
 	</div>
 </form>
