FEAT: update displays for passwords

--- a/site/templates/twig/msa/logm/user/password/modal.twig
+++ b/site/templates/twig/msa/logm/user/password/modal.twig
@@ -1,9 +1,9 @@
 <!-- Modal -->
-<div class="modal fade" id="pswd-modal" tabindex="-1" role="dialog" aria-labelledby="pswd-modal-title" aria-hidden="true">
+<div class="modal fade password-modal" id="password-modal" tabindex="-1" role="dialog" aria-labelledby="password-modal-title" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="pswd-modal-title">Change Password</h5>
+				<h5 class="modal-title" id="password-modal-title">Change Password</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
