--- a/site/templates/twig/msa/logm/user/subfunction-links.twig
+++ b/site/templates/twig/msa/logm/user/subfunction-links.twig
@@ -5,12 +5,12 @@
 		</a>
 	</li>
 	<li class="nav-item border">
-		<a class="nav-link" data-toggle="modal" href="#pswd-modal">
+		<a class="nav-link" data-toggle="modal" href="#password-modal">
 			Change Password
 		</a>
 	</li>
 	<li class="nav-item border">
-		<a class="nav-link" data-toggle="modal" href="#pswd-web-modal">
+		<a class="nav-link" data-toggle="modal" href="#web-password-modal">
 			Change Web Password
 		</a>
 	</li>
