--- a/site/templates/twig/msa/logm/user/web-password/modal.twig
+++ b/site/templates/twig/msa/logm/user/web-password/modal.twig
@@ -1,15 +1,15 @@
 <!-- Modal -->
-<div class="modal fade" id="pswd-web-modal" tabindex="-1" role="dialog" aria-labelledby="pswd-web-modal-title" aria-hidden="true">
+<div class="modal fade password-modal" id="web-password-modal" tabindex="-1" role="dialog" aria-labelledby="web-password-modal-title" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="pswd-web-modal-title">Change Web Password</h5>
+				<h5 class="modal-title" id="web-password-modal-title">Change Web Password</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
-				{% include 'msa/logm/user/password/form.twig' %}
+				{% include 'msa/logm/user/password/form.twig' with {'type': 'web-password'} %}
 			</div>
 		</div>
 	</div>
