--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Inputs.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Inputs.js.twig
@@ -18,7 +18,7 @@ class SysopInputs {
 		this.afterdecimal  = this.form.find('input[name=afterdecimal]');
 		this.beforedecimal = this.form.find('input[name=beforedecimal]');
 		this.notecode      = this.form.find('input[name=notecode]');
-		this.filename      = this.form.find('input[name=filename]');
+		this.filename      = this.form.find('select[name=filename]');
 		this.docfolder     = this.form.find('input[name=docfolder]');
 	}
 }
