--- a/site/templates/twig/code-tables/msa/sysop/form/.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/.js.twig
@@ -5,6 +5,53 @@ $(function() {
 	let server    = SysopRequests.getInstance();
 	let alert     = SysopAlerts.getInstance();
 
+	$("body").on("focusin", "#code-form input:not([name=code], [name=system])", function(e) {
+		if (formSysop.inputs.system.val() == '') {
+			formSysop.inputs.system.focus();
+			return false;
+		}
+		if (formSysop.inputs.code.val() == '') {
+			formSysop.inputs.code.focus();
+		}
+	});
+
+	$("body").on("focusin", "#code-form input[name=code]", function(e) {
+		if (formSysop.inputs.system.val() == '') {
+			formSysop.inputs.system.focus();
+			return false;
+		}
+	});
+
+/* =============================================================
+	Unsaved Fields Alert
+============================================================= */
+	origForm = formSysop.form.serialize();
+
+	$("body").on("click", "a:not(#code-form .form_button, #ajax-modal a, .swal2-modal a, .bootstrap-select a, #code-form .delete_button)", function(e) {
+		if (formSysop.form.serialize() !== origForm) {
+			e.preventDefault();
+			var a = $(this);
+			var href = a.attr('href');
+
+			alert.unsavedChanges(function(save) {
+				if (save) {
+					var validator = formSysop.form.validate();
+					if (validator.valid()) {
+						formSysop.form.find('button[type=submit]').click();
+					};
+				} else {
+					var uri = URI();
+					uri.setQuery('system', '');
+					uri.setQuery('code', '');
+
+					$.get(uri.toString(), function() {
+						window.location.href = href;
+					});
+				}
+			});
+		}
+	});
+
 /* =============================================================
 	Event Functions
 ============================================================= */
@@ -72,7 +119,7 @@ $(function() {
 				maxlength: formSysop.config.fields.notecode.maxlength,
 				normalizer: function(value) {
 					if (value.trim() == '') {
-						formCode.form.find('input[name=notecode]').val('');
+						formSysop.form.find('input[name=notecode]').val('');
 						return '';
 					}
 					return value;
