--- a/site/templates/twig/code-tables/msa/sysop/form/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/msa/sysop/form/js/classes/Form.js.twig
@@ -21,13 +21,17 @@ class SysopForm {
 			this.inputs.beforedecimal.removeAttr('readonly');
 			return true;
 		}
+		this.inputs.beforedecimal.val('');
+		this.inputs.afterdecimal.val('');
 		this.inputs.afterdecimal.attr('readonly', 'true');
 		this.inputs.beforedecimal.attr('readonly', 'true');
 		return false;
 	}
 
 	enableDisableDocfolder() {
+		console.log(this.inputs.filename.val());
 		if (this.inputs.filename.val() == 'N') {
+			this.inputs.docfolder.val('');
 			this.inputs.docfolder.attr('readonly', 'true');
 			return true;
 		}
