--- a/site/templates/twig/items/vxm/list/xref/js.twig
+++ b/site/templates/twig/items/vxm/list/xref/js.twig
@@ -1,8 +1,8 @@
 $(function() {
-	{% if page.focus and page.focus != 'new' %}
-		$('tr[data-vxm="{{ page.focus }}"]').addClass('highlight');
-		// $('html, body').animate({scrollTop: $('#{{ page.focus }}').offset().top,},700,'linear');
-		// $('html, body').animate({scrollTop: $('[data-vxm="{{ page.focus }}"]').offset().top,},700,'linear');
+	{% if input.get.offsetExists('focus') and input.get.string('focus') != 'new' %}
+		$('tr[data-vxm="{{ input.get.string('focus') }}"]').addClass('highlight');
+		// $('html, body').animate({scrollTop: $('#{{ input.get.string('focus') }}').offset().top,},700,'linear');
+		// $('html, body').animate({scrollTop: $('[data-vxm="{{ input.get.string('focus') }}"]').offset().top,},700,'linear');
 	{% endif %}
 
 /* =============================================================
