--- a/site/templates/twig/items/vxm/xref/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js/classes/Alerts.js.twig
@@ -12,7 +12,7 @@ class VxmAlerts {
 		swal2.fire({
 			title: "Vendor Item " + vendoritemID + " exists",
 			text: 'Would you like to go edit this item?',
-			icon: 'error',
+			icon: 'question',
 			showCancelButton: true,
 			confirmButtonText: 'Yes',
 			cancelButtonText: 'No',
