--- a/site/templates/twig/items/mxrfe/xref/form/js.twig
+++ b/site/templates/twig/items/mxrfe/xref/form/js.twig
@@ -177,9 +177,9 @@ $(function() {
 
 	function swal_xref_exists() {
 		swal2.fire({
-			title: "X-ref already exists",
-			text: 'Would you like to go edit this X-ref?',
-			icon: 'error',
+			title: "Manufacturer Item " + input_mnfritemID.val() + " exists",
+			text: 'Would you like to edit this item?',
+			icon: 'question',
 			showCancelButton: true,
 			confirmButtonText: 'Yes',
 			cancelButtonText: 'No',
