--- a/site/templates/twig/items/vxm/xref/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js/classes/Alerts.js.twig
@@ -11,7 +11,7 @@ class VxmAlerts {
 	xrefExists(vendorID, vendoritemID, itemID, callback) {
 		swal2.fire({
 			title: "Vendor Item " + vendoritemID + " exists",
-			text: 'Would you like to go edit this item?',
+			text: 'Would you like to edit this item?',
 			icon: 'question',
 			showCancelButton: true,
 			confirmButtonText: 'Yes',
