--- a/site/templates/twig/items/vxm/xref/form/js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js.twig
@@ -58,12 +58,16 @@ $(function() {
 
 	$("body").on("change", ".unit-margin", function(e) {
 		var unitrow = $(this).closest('.unit-row');
-		var computeListpriceOrCost = '{{ vxm.getConfigAp().computelistpriceorcost }}';
 		var vxmInputs = VxmInputs.getInstance();
 		var config = VxmConfigs.getInstance();
 
 		if (parseInt(unitrow.data('break')) == 0) {
+			console.log('List price or cost: ' + config.basemarginchange.computeListpriceOrCost);
+			console.log('list price option: ' + config.options.basemarginchange.computeListpriceOrCost.listprice);
+
+
 			if (config.basemarginchange.computeListpriceOrCost == config.options.basemarginchange.computeListpriceOrCost.listprice) {
+
 				formVxm.inputs.updateListPriceFromBaseMargin(function() {
 					var vxmInputs = VxmInputs.getInstance();
 					vxmInputs.updateAllUnitMargins();
